--- a/style.css
+++ b/style.css
@@ -3,9 +3,29 @@ body {
   margin: 0;
   padding: 0;
   background-color: rgb(138, 233, 119);
-  /* height: 100vh;
-    width: 100vw;
-    position: relative; */
+  box-sizing: border-box;
+}
+
+button {
+  cursor: pointer;
+}
+
+#prev,
+#next {
+  border: 2px solid whitesmoke;
+  z-index: 100;
+}
+
+button#next {
+  position: absolute;
+  top: 50vh;
+  right: 5vh;
+}
+
+button#prev {
+  position: absolute;
+  top: 50vh;
+  left: 5vh;
 }
 
 :focus {
@@ -15,31 +35,39 @@ body {
 
 #thumb-container {
   display: flex;
+  height: 10vh;
+  width: auto;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
-  padding-bottom: 2.5vh;
-  /* position: absolute; */
+  align-items: center;
+  z-index: 100;
   gap: 2px;
-  /* z-index: 10; */
+  position: absolute;
+  overflow: scroll;
 }
 #thumb-container img {
-  height: 100px;
+  height: 10vh;
   cursor: pointer;
 }
 
 .large-image {
   display: flex;
   justify-content: center;
-  padding-bottom: 2.5vh;
-
-  /* position: absolute; */
 }
 
 .large-image img {
-  height: 60vh;
-  width: auto;
+  width: 100%;
+  height: 80vh;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 footer {
   text-align: center;
+  margin: 0;
+  padding: 0;
+}
+p {
+  padding: 3px;
 }
